2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaCallCmd.java (cmdProc):
	* src/tcljava/tcl/lang/JavaInvoke.java (callMethod,
	callStaticMethod):
	* src/tcljava/tcl/lang/ReflectObject.java (cmdProc):
	* tests/tclblend/javaObj.test:
	Don't set the interp result after invoking a
	void Java method. This is functionally equivalent
	and saves a wrapper object allocation.

2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/FieldSig.java (get):
	* src/tcljava/tcl/lang/FuncSig.java (get):
	* src/tcljava/tcl/lang/JavaNewCmd.java (get,
	looksLikeArraySig):
	* tests/tcljava/FuncSig.test:
	* tests/tcljava/JavaNewCmd.test:
	Optimize TclList use by getting the string
	representation of lists we know have a
	length of 1. This avoids an unneeded
	allocation of a native object wrapper
	in Tcl Blend. Comment out the pointless
	setting of an internal rep in FuncSig
	and update test cases.

2002-12-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/java.h:
	* src/native/javaCmd.c (FreeJavaCache, JavaSetupJava):
	* src/native/javaObj.c (JavaObjInit, JavaGetTclObject):
	* src/tclblend/tcl/lang/TclList.java (newInstance):
	* tests/tclblend/javaObj.test:
	Add newInstance method to TclList and call it when
	we detect that a native object is a list. The
	old approach was to wrap the object as a CObject
	and then convert it to a TclList the first time
	a list operation was done from Java. The new
	approach is more efficient.

2002-08-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Fix 'make test' rule by setting
	TCLLIBPATH correctly.
	* src/native/javaCmd.c (Tclblend_Init):
	* src/native/javaInterp.c (JavaTraceProc,
	Java_tcl_lang_Interp_create):
	* src/native/javaList.c (Java_tcl_lang_TclList_append,
	Java_tcl_lang_TclList_replace,
	Java_tcl_lang_TclList_splitList):
	* src/native/javaNotifier.c (Java_tcl_lang_Notifier_init,
	Java_tcl_lang_Notifier_alertNotifier):