@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Interp.test,v 1.6 2001/05/12 21:57:23 mdejong Exp $
+# RCS: @(#) $Id: Interp.test,v 1.7 2002/12/07 22:32:07 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -203,6 +203,15 @@ test Interp-5.1 {backslashes} {
     }
     list $r1 $r2	
 } {{This if statement is all on one line} {This if statement has a back slash}}
+
+test Interp-6.1 {wrong # args to proc} {
+    proc p { arg } {}
+    proc pd { arg1 {arg2 foo} } {}
+    list \
+        [catch {p} err] $err \
+        [catch {p 1 2} err] $err \
+        [catch {pd 1 2 3} err] $err
+} {1 {wrong # args: should be "p arg"} 1 {wrong # args: should be "p arg"} 1 {wrong # args: should be "pd arg1 ?arg2?"}}
 
 # cleanup
 ::tcltest::cleanupTests
